--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>MR. SURFING</title>
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <title>DMCL</title>
   </head>
   <body>
     <div id="root"></div>
